# base-rs

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: base10.rs  base16.rs  base2.rs  lib.rs
